# fanta-formazioni-bot

./: .gitignore  LICENSE  README.md  clean_wiki_data.py  env.example  main.py  pyproject.toml  requirements.txt  seriea_calendar.csv  seriea_calendar.txt  utils.py  write_default_dates.py
.github/: pull_request_template.md
fantaformazionibot/: config.py  main.py
fantaformazionibot/bot/: jobs.py
fantaformazionibot/bot/handler/: commands.py  default_commands.py  default_handlers.py  errors.py  handlers.py
fantaformazionibot/constant/: constants.py  messages.py
fantaformazionibot/db/: database.py
fantaformazionibot/db/model/: match.py
fantaformazionibot/utils/: csv.py  dates.py  logging.py
fantaformazionireminder/: config.py  main.py
fantaformazionireminder/resources/: saved_dates.pkl
fantaformazionireminder/src/: config.py  main.py
fantaformazionireminder/src/utils/: clean_dates.py
fantaformazionireminder/utils/: clean_dates.py  expiry_message.py
src/fantaformazionireminder/: config.py  default_dates.py  main.py
src/fantaformazionireminder/constants/: notifications_interval.py
src/fantaformazionireminder/resources/: seriea_calendar.csv
src/fantaformazionireminder/utils/: clean_dates.py  default_dates.py  expiry_message.py
